ini tampilan aja

--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ body {
 
 .sidebar ul li a {
     color: #555555;
-    border-bottom: 1px solid #aaa4a4;
+    border-bottom: 1px solid #e5e7eb;
     font-weight: bold;
     text-decoration: none;
     display: block;
@@ -290,8 +290,8 @@ body {
 
 .search-sidebar {
     padding: 15px 25px;
-    border-bottom: 1px solid #aaa4a4;
-    border-top: 1px solid #555555;
+    border-bottom: 1px solid #e5e7eb;
+    border-top: 1px solid #e5e7eb;
 }
 
 .search-input {
