--- a/style.css
+++ b/style.css
@@ -331,6 +331,7 @@ body {
 .info p {
     color: #DC0000;
     font-weight: bold;
+    font-size: 12px;
 }
 
 .footer {
@@ -352,12 +353,8 @@ body {
     flex-wrap: wrap;
 }
 
-.footer-left {
-    
-}
-
 .footer-left img {
-    height: calc(100vh * 0.05);
+    height: calc(100vh * 0.10);
 }
 
 .footer-center {
