--- a/style.css
+++ b/style.css
@@ -399,6 +399,27 @@ body {
     margin-right: 5px;
 }
 
+.has-sub {
+  position: relative;
+}
+
+.sub-menu {
+  display: none;
+  position: absolute;
+  background: #fff;
+  padding: 10px;
+  z-index: 999;
+}
+
+.has-sub:hover .sub-menu {
+  display: block;
+}
+
+.sub-menu li {
+  list-style: none;
+}
+
+
 @media (max-width: 768px) {
     .container {
         display: block;
