--- a/style.css
+++ b/style.css
@@ -310,14 +310,12 @@ body {
     height: 150px;
 }
 
-.info a h3 {
+.info a p {
     color: #000;
-    font: caption;
     font-weight: bold;
 }
 
-.info h4,
-.info p {
+.info h4 {
     color: #DC0000;
     font-weight: bold;
     font-size: 12px;
