--- a/beranda.css
+++ b/beranda.css
@@ -182,6 +182,12 @@
     transform: scale(1.06);
 }
 
+.iklan {
+  min-height: 120px;
+  overflow: hidden;
+}
+
+
 @media (max-width: 768px) {
     .berita-left {
         display: none;
