--- a/style.css
+++ b/style.css
@@ -135,12 +135,12 @@ body {
 
 .card img {
     width: 100%;
-    height: 80%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
-.card h3 {
-    font-size: 16px;
+.card p {
+    font-weight: bold;
+    margin-bottom: 0;
 }
 
 .card-detail {
@@ -204,6 +204,7 @@ body {
 
 .detail-btn {
     border: none;
+    text-decoration: none;
     font-weight: bold;
     color: #DC0000;
     background-color: transparent;
