--- a/microweb.css
+++ b/microweb.css
@@ -1,3 +1,14 @@
+.container-microweb {
+    padding: 10px calc(15%);
+    display: flex;
+    gap: 5px;
+}
+
+.berita-microweb {
+    width: 70%;
+    padding: 10px;
+}
+
 .img-microweb {
     width: 300px;
     height: 250px;
@@ -12,9 +23,14 @@
     border-bottom: 1px solid #e5e7eb;
 }
 
-.home a p {
+.judul {
     color: #000;
     font-weight: bold;
+    font-size: 20px;
+}
+
+.tanggal {
+    color: #797979;
 }
 
 .bener {
