--- a/style.css
+++ b/style.css
@@ -86,6 +86,32 @@ body {
     font-size: 14px;
 }
 
+.navbar-sub ul li {
+    position: relative;
+}
+
+/* submenu default tersembunyi */
+.navbar-sub ul li .sub-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #fff;
+    min-width: 180px;
+    padding: 10px 0;
+    display: none;
+    flex-direction: column;
+    border: 1px solid #e5e7eb;
+    z-index: 999;
+}
+
+/* item submenu */
+.navbar-sub ul li .sub-menu li a {
+    padding: 8px 15px;
+    display: block;
+    color: #000;
+}
+
+
 .langganan {
     background-color: #DC0000;
     color: #fff;
@@ -536,5 +562,13 @@ body {
 
     .iklan-gambar {
         padding: 10px;
+    }
+
+    .navbar-sub ul li:focus-within > .sub-menu {
+        display: flex;
+        position: static; /* turun ke bawah menu */
+        border: none;
+        padding-left: 10px;
+        z-index: 100;
     }
 }
