--- a/microweb.css
+++ b/microweb.css
@@ -1,5 +1,5 @@
 .container-microweb {
-    padding: 10px calc(15%);
+    padding: 10px calc(10%);
     display: flex;
     gap: 5px;
 }
@@ -15,7 +15,8 @@
     object-fit: contain;
 }
 
-.home a {
+.home a,
+.Pendidikan a {
     display: flex;
     padding: 20px 0;
     gap: 10px;
@@ -50,10 +51,40 @@
 }
 
 .bener {
-    padding: 10px calc(18%);
+    padding: 10px calc(12%);
     margin-top: 10px;
 }
 
 .gif-tekno {
     width: 100%;
+}
+
+.iklan-microweb {
+    margin-top: 10px;
+}
+
+.img-iklan-microweb {
+    width: 100%;
+}
+
+@media (max-width: 768px) {
+    .container-microweb {
+        padding: 10px;
+        display: block;
+    }
+
+    .img-microweb {
+        width: 150px;
+        height: 150px;
+        object-fit: cover;
+    }
+
+    .berita-microweb {
+        width: 100%;
+        padding: 0;
+    }
+
+    .bener {
+        padding: 10px;
+    }
 }
