--- a/microweb.css
+++ b/microweb.css
@@ -1,5 +1,5 @@
 .container-microweb {
-    padding: 10px calc(10%);
+    padding: 10px calc(8%);
     display: flex;
     gap: 5px;
 }
@@ -51,7 +51,7 @@
 }
 
 .bener {
-    padding: 10px calc(12%);
+    padding: 10px calc(10%);
     margin-top: 10px;
 }
 
@@ -65,6 +65,44 @@
 
 .img-iklan-microweb {
     width: 100%;
+}
+
+.footer-microweb {
+    max-width: 900px;
+    margin: auto;
+    padding: 30px 20px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    flex-wrap: inherit;
+}
+
+.logo-microweb {
+    width: calc(100vh * 0.45);
+}
+
+.footer-left {
+    text-align: justify;
+    width: 50%;
+}
+
+.item-microweb {
+    display: flex;
+    padding: 20px 0;
+    gap: 10px;
+    text-decoration: none;
+    border-bottom: 1px solid #e5e7eb;
+}
+
+.img-terbaru {
+        width: 150px;
+    object-fit: contain;
+    height: 150px;
+}
+
+.judul-terbaru {
+    font-size: 15px;
+    color: #000;
 }
 
 @media (max-width: 768px) {
