ini tampilan aja

--- a/style.css
+++ b/style.css
@@ -338,7 +338,7 @@ body {
     height: 150px;
 }
 
-.info a p {
+.judul {
     color: #000;
     font-weight: bold;
 }
@@ -474,6 +474,22 @@ body {
     width: 100%;
 }
 
+.detail-info {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.kategori {
+    font-size: 12px;
+    color: #DC0000;
+}
+
+.tanggal {
+    font-size: 12px;
+    color: #000;
+}
+
 @media (max-width: 768px) {
     .container {
         display: block;
@@ -532,6 +548,17 @@ body {
     .footer-left,
     .footer-center {
         display: none;
+    }
+
+    .info a img {
+        width: 80px;
+        height: 80px;
+        object-fit: cover;
+    }
+
+    .judul {
+        font-weight: normal;
+        font-size: 12px;
     }
 
     .lampung {
