--- a/microweb.css
+++ b/microweb.css
@@ -181,6 +181,11 @@
     color: #DC0000;
 }
 
+.editor {
+    font-size: 12px;
+    color: #45b4f5;
+}
+
 .deskripsi {
     color: #797979;
     font-size: 15px;
