--- a/beranda.css
+++ b/beranda.css
@@ -1,5 +1,5 @@
 .container-beranda {
-    padding: 10px calc(10%);
+    padding: 10px calc(7%);
     display: flex;
     gap: 5px;
     align-items: flex-start;
@@ -95,11 +95,9 @@
     left: 0;
     width: 100%;
     padding: 14px;
-    background: linear-gradient(
-        to top,
-        rgba(0, 0, 0, 0.7),
-        rgba(0, 0, 0, 0)
-    );
+    background: linear-gradient(to top,
+            rgba(0, 0, 0, 0.7),
+            rgba(0, 0, 0, 0));
 }
 
 .card-text {
@@ -151,11 +149,9 @@
     bottom: 0;
     width: 100%;
     padding: 14px;
-    background: linear-gradient(
-        to top,
-        rgba(0,0,0,0.7),
-        rgba(0,0,0,0)
-    );
+    background: linear-gradient(to top,
+            rgba(0, 0, 0, 0.7),
+            rgba(0, 0, 0, 0));
 }
 
 .berita-terpopuler .card-category {
@@ -188,6 +184,11 @@
     margin-bottom: 15px;
 }
 
+.editor {
+    font-size: 12px;
+    color: #45b4f5;
+}
+
 @media (max-width: 768px) {
     .berita-left {
         display: none;
@@ -211,4 +212,5 @@
     .berita-terpopuler a {
         margin-bottom: 15px;
     }
+
 }
