--- a/style.css
+++ b/style.css
@@ -7,20 +7,11 @@ body {
     overflow-x: hidden;
     scrollbar-width: none;
     -ms-overflow-style: none;
-     font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    transform: translateY(-30px);
-    opacity: 0;
-    animation: slideDown 1.2s ease forwards;
 }
 
-@keyframes slideDown {
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
 
 .navbar-main {
     background-color: #fff;
@@ -258,7 +249,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: rgba(0, 0, 0, 0.5);
     z-index: 9998;
 
@@ -514,6 +505,10 @@ h2 {
     display: none;
 }
 
+.meta {
+    margin-bottom: 15px;
+}
+
 @media (max-width: 768px) {
     .container {
         display: block;
@@ -655,3 +650,4 @@ h2 {
     }
 
 }
+
