--- a/microweb.css
+++ b/microweb.css
@@ -170,6 +170,7 @@
     color: #000;
     font-weight: bold;
     font-size: 18px;
+    margin-top: 0;
 }
 
 .info-microweb {
@@ -197,6 +198,7 @@
 .deskripsi {
     color: #797979;
     font-size: 15px;
+    margin-top: 0;
 }
 
 .bener {
@@ -256,6 +258,40 @@
 
 .gambar-berita {
     width: 100%;
+}
+
+.home-staiab {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.home-staiab > * {
+    width: calc(50% - 5px);
+}
+
+
+.home-staiab a{
+    text-decoration: none;
+}
+
+.img-staiab {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    display: block;
+}
+
+
+.kategori-staiab {
+  color: #DC0000;  
+  font-size: 12px;
+}
+
+.akademik a {
+    color: #000;
+    text-decoration: none;
+    display: flex;
 }
 
 @media (max-width: 768px) {
