--- a/style.css
+++ b/style.css
@@ -489,6 +489,7 @@ body {
 .kategori {
     font-size: 12px;
     color: #DC0000;
+    margin: 0;
 }
 
 .tanggal {
@@ -650,10 +651,6 @@ h2 {
         .navbar-sub ul li:hover>.sub-menu {
             display: flex;
         }
-    }
-
-    .kategori {
-        display: none;
     }
 
 }
