--- a/style.css
+++ b/style.css
@@ -517,6 +517,17 @@ h2 {
     min-width: 170px;
 }
 
+.load-more {
+    margin: 20px auto;
+    height: 30px;
+    width: 250px;
+    border: 1px solid #e5e7eb;
+    background-color: transparent;
+    cursor: pointer;
+    display: block;
+    position: relative;
+}
+
 @media (max-width: 768px) {
     .container {
         display: block;
@@ -524,7 +535,7 @@ h2 {
     }
 
     .navbar-main {
-        padding: 14px 10px;
+        padding: 14px 15px;
     }
 
     .berita-mobile {
@@ -555,7 +566,7 @@ h2 {
     }
 
     .button-user {
-        gap: 10px;
+        gap: 8px;
     }
 
     .langganan {
