--- a/microweb.css
+++ b/microweb.css
@@ -175,6 +175,21 @@
     text-decoration: none;
 }
 
+.home a:hover,
+.Pendidikan a:hover,
+.ubl-lanjutan a:hover {
+    box-shadow:
+        0 2px 8px rgba(0, 0, 0, 0.53),
+        0 8px 20px rgba(0, 0, 0, 0.52);
+    padding: 10px;
+    border-radius: 10px;
+    transition: box-shadow 0.3s ease;
+    position: relative;
+    z-index: 100;
+    margin: 10px 0;
+}
+
+
 .judul {
     color: #000;
     font-weight: bold;
